minor logic changes to produce correct json output

--- a/ExamplesToJson/package.json
+++ b/ExamplesToJson/package.json
@@ -8,7 +8,8 @@
   },
   "keywords": [],
   "author": "",
+  "types": "module",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "description": ""
 }
